--- a/sass/css secret.scss
+++ b/sass/css secret.scss
@@ -16,3 +16,33 @@
   background-position: 0 0, $size $size;
   background-size: 2*$size 2*$size;
 }
+
+// 折角
+@mixin folded-corner($background, $size, $angle: 30deg) {
+	
+  position: relative;
+  background: $background; /* Fallback */
+  background: linear-gradient($angle - 180deg, transparent $size, $background 0);
+  border-radius: .5em;
+  
+  $x: $size / sin($angle);
+  $y: $size / cos($angle);
+  
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0; right: 0;
+    background: linear-gradient(to left bottom, transparent 50%, rgba(0,0,0,.2) 0, rgba(0,0,0,.4)) 100% 0 no-repeat;
+    width: $y;
+    height: $x;
+    transform: translateY($y - $x) rotate(2*$angle - 90deg);
+    transform-origin: bottom right;
+    border-bottom-left-radius: inherit;
+    box-shadow: -.2em .2em .3em -.1em rgba(0,0,0,.15);
+  }
+}  
+
+// 使用
+// .note {
+//   @include folded-corner(#5588aa, 2em, 40deg)
+// }
