--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,19 @@
-@mixin test {
-
+img {
+  width: 30px;
+  height: 30px;
+  float: left;
+}
+// .div {
+//   // display: inline-block;
+//   // overflow: hidden;
+//   position: absolute;
+//   background-color: green;
+// }
+.div1 {
+  margin-bottom: 50px;
+  background-color: red;
+}
+.div2 {
+  margin-top: 50px;
+  background-color: green;
 }
